# SmartCalculator

./: README.md
src/: Doxyfile  Makefile  cm_install.sh  main.cpp
src/backend/: executor.c  main  parse_infix.c  parser.c  stack.c  test_main.c  utils.c
src/backend/include/: defines.h  executer.h  parse_infix.h  parser.h  stack.h  utils.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
src/gui/include/: mainwindow.h
src/tests/: tests.c
